+Tipo de unidad -> tipo de servicio labels

--- a/KLS_WEB/KLS_WEB/Views/Demand/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Demand/Index.cshtml
@@ -67,7 +67,7 @@
                     <tr>
                         <th>ID</th>
                         <th>CLIENTE</th>
-                        <th>TIPO DE UNIDAD</th>
+                        <th>TIPO DE SERVICIO</th>
                         <th>ORIGEN</th>
                         <th>DESTINO</th>
                         <th>FECHA SALIDA</th>
@@ -109,7 +109,7 @@
                     </div>
                     <div class="row mt-3">
                         <div class="col-5">
-                            <label for="edittipounidad" class="form-label size-12 font-weight-bold float-left">TIPO DE UNIDAD</label>
+                            <label for="edittipounidad" class="form-label size-12 font-weight-bold float-left">TIPO DE SERVICIO</label>
                             <select class="form-control form-control-sm tipounidad" style="width: 100%;" id="addedittipounidad" name="unitid">
                                 <option value="0" selected disabled>SELECCIONA</option>
                             </select>
@@ -272,7 +272,7 @@
                     <thead>
                         <tr>
                             <th>TRANSPORTISTA</th>
-                            <th>TIPO DE UNIDAD</th>
+                            <th>TIPO DE SERVICIO</th>
                             <th>ORIGEN</th>
                             <th>DESTINO</th>
                             <th>FECHA DISPONIBILIDAD</th>
@@ -400,7 +400,7 @@
                     <thead>
                         <tr>
                             <th>CLIENTE</th>
-                            <th>TIPO DE UNIDAD</th>
+                            <th>TIPO DE SERVICIO</th>
                             <th>ORIGEN</th>
                             <th>DESTINO</th>
                             <th>FECHA SALIDA</th>
