--- a/KLS_WEB/KLS_WEB/Views/Travels/Details.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/Details.cshtml
@@ -150,7 +150,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-5 col-form-label col-form-label-sm">Tipo de Unidad</label>
+                        <label class="col-5 col-form-label col-form-label-sm">Tipo de SERVICIO</label>
                         <div class="col-7">
                             <input asp-for="TipoUnidadNombre" type="text" class="form-control form-control-sm"
                                    id="tipounidad" disabled="disabled" required>
