--- a/KLS_WEB/KLS_WEB/Views/Travels/_Servicios.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/_Servicios.cshtml
@@ -112,7 +112,7 @@
                             <div class="col-6 bg-light-grey">
                                 <div class="col-12">
                                     <div class="row mb-0">
-                                        <div class="poppins medium size-14 text-left mt-4 mb-3 col-4">TIPO DE UNIDAD</div>
+                                        <div class="poppins medium size-14 text-left mt-4 mb-3 col-4">TIPO DE SERVICIO</div>
                                         <div class="poppins medium size-14 text-left mt-4 mb-3 col-7 ml-2">ELEGIR EQUIPO</div>
                                     </div>
                                     <div class="equipocontainer">
