--- a/KLS_WEB/KLS_WEB/Views/Travels/New.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Travels/New.cshtml
@@ -117,7 +117,7 @@
                         </div>
                     </div>
                     <div class="form-group col-3">
-                        <label class="col-form-label col-form-label-sm">Tipo de Unidad</label>
+                        <label class="col-form-label col-form-label-sm">Tipo de SERVICIO</label>
                         <div>
                             <select class="form-control form-control-sm" id="tipounidad" name="tipounidad">
                             </select>
