--- a/KLS_WEB/KLS_WEB/Views/Carriers/Inventory/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Carriers/Inventory/Index.cshtml
@@ -43,26 +43,28 @@
         </div>
 
         <div class="p-4 shadow bg-white">
-            <table id="table" class="table table-striped table-bordered display table-hover table-viajes" width="100%">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Marca</th>
-                        <th>Modelo</th>
-                        <th>Año</th>
-                        <th># Serie</th>
-                        <th># económico</th>
-                        <th>Placa</th>
-                        <th>Color</th>
-                        <th>Tipo de unidad</th>
-                        <th>Cap</th>
-                        <th>Vol</th>
-                        <th>Estatus</th>
-                        <th class="text-center">Acciones</th>
-                    </tr>
-                </thead>
-                <tbody id="table-info"></tbody>
-            </table>
+            <div style="overflow-x: auto; overflow-y: hidden;">
+                <table id="table" class="table table-striped table-bordered display table-hover table-viajes">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Marca</th>
+                            <th>Modelo</th>
+                            <th>Año</th>
+                            <th># Serie</th>
+                            <th># económico</th>
+                            <th>Placa</th>
+                            <th>Color</th>
+                            <th>Tipo de unidad</th>
+                            <th>Cap</th>
+                            <th>Vol</th>
+                            <th>Estatus</th>
+                            <th class="text-center">Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody id="table-info"></tbody>
+                </table>
+            </div>
         </div>
 
     </div>
